--- a/client/src/style/scss/theme/blue.scss
+++ b/client/src/style/scss/theme/blue.scss
@@ -10,7 +10,7 @@ $brand-dark: #2c3143;
 $brand-toggle: gold;
 
 // Masthead colors
-$brand-masthead: $brand-dark;
+$brand-masthead: #189200;
 $brand-masthead-text: $brand-light;
 $brand-masthead-text-active: lighten($brand-light, 15%);
 $brand-masthead-text-hover: $brand-toggle;
